--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Cataloger of planets</string>
+    <string name="planets_explored">Planets Explored:</string>
+    <string name="coins">Coins:</string>
+    <string name="start">Start</string>
+    <string name="chapter">Chapter</string>
 </resources>
