--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="core">Core</string>
     <string name="next">Next</string>
     <string name="shop">Shop</string>
+    <string name="core_dis">You need to collect 3 checkpoints (in the green and yellow areas) in sequence, avoiding prolonged red.</string>
 </resources>
