--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="next">Next</string>
     <string name="shop">Shop</string>
     <string name="core_dis">You need to collect 3 checkpoints (in the green and yellow areas) in sequence, avoiding prolonged red.</string>
+    <string name="done">Done</string>
 </resources>
