--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Cataloger of planets</string>
     <string name="planets_explored">Planets Explored:</string>
-    <string name="coins">Coins:</string>
+    <string name="coins">Coins</string>
     <string name="start">Start</string>
     <string name="chapter">Chapter</string>
     <string name="planet">Planet</string>
@@ -30,4 +30,5 @@
     <string name="shop">Shop</string>
     <string name="core_dis">You need to collect 3 checkpoints (in the green and yellow areas) in sequence, avoiding prolonged red.</string>
     <string name="done">Done</string>
+    <string name="play">Play</string>
 </resources>
